--- a/templates/shop/myshop.html
+++ b/templates/shop/myshop.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %} {% block title %} Shop Page {% endblock %}
+{% extends 'base.html' %} {% block title %} Shop Management | Nina Sky Innovation Limited {% endblock %}
 
 {% block content %}
 
