--- a/templates/shop/new_shop_form.html
+++ b/templates/shop/new_shop_form.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %} {% block title %} Shop Form {% endblock %}
+{% extends 'base.html' %} {% block title %} Nina Sky Innovation Limited | Create Shop {% endblock %}
 {% load static %}
 {% load crispy_forms_tags %}
 
