--- a/templates/rent/list_rents.html
+++ b/templates/rent/list_rents.html
@@ -1,14 +1,20 @@
 {% extends "rent/base.html" %}
 {% block content %}
-    {% for rent in rentss %}
+    {% for rent in rents %}
         <article class="media content-section">
           <div class="media-body">
             <div class="article-metadata">
               <a class="mr-2" href="#">{{ rent.rent_type }}</a>
-              <small class="text-muted">{{ rent.date_due }}</small>
+              <small class="text-muted" style="justify-content: right;">Due Date: {{ rent.date_due }}</small>
             </div>
             <h2><a class="article-title" href="#">{{ rent.shop.no }}</a></h2>
             <p class="article-content">Rented by {{ rent.customer.name }}</p>
+            {% if user.is_superuser %}
+            <div>
+              <a class="btn btn-secondary btn-sm mt-1 mb-1" style="justify-content: right; text-align: end;" href="">More Details</a>
+              <a class="btn btn-danger btn-sm mt-1 mb-1" href="">Delete</a>
+            </div>
+          {% endif %}
           </div>
         </article>
     {% endfor %}
