--- a/templates/rent/base.html
+++ b/templates/rent/base.html
@@ -26,6 +26,7 @@
             src="{% static 'images/logo-removebg-preview.png' %}"
             alt="navbar brand"
             class="navbar-brand"
+            height="35px"
           /></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
