--- a/templates/rent/list_rents.html
+++ b/templates/rent/list_rents.html
@@ -11,7 +11,7 @@
             <p class="article-content">Rented by {{ rent.customer.name }}</p>
             {% if user.is_superuser %}
             <div>
-              <a class="btn btn-secondary btn-sm mt-1 mb-1" style="justify-content: right; text-align: end;" href="">More Details</a>
+              <a class="btn btn-secondary btn-sm mt-1 mb-1" style="justify-content: right; text-align: end;" href="{% url 'edit-shop-rents' rent.shop.no %}">More Details</a>
               <a class="btn btn-danger btn-sm mt-1 mb-1" href="">Delete</a>
             </div>
           {% endif %}
