--- a/templates/web/profile_approved_email.html
+++ b/templates/web/profile_approved_email.html
@@ -6,7 +6,7 @@
 <body>
     <p>Hello {{ user }},</p>
     
-    <p>Your profile has been approved.</p>
+    <p>Your Nina Sky account has been approved.</p>
     
     <p>Thank you!</p>
 </body>
