--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,8 @@
               <a class="nav-item nav-link" href="{% url 'dashboard' %}">Dashboard</a>
               <a class="nav-item nav-link" href="{% url 'customer' %}">Customer</a>
               <a class="nav-item nav-link" href="{% url 'all-shops' %}">Shop</a>
-              <a class="nav-item nav-link" href="">Account</a>
+              <a class="nav-item nav-link" href="{% url 'list-shop-rents' %}">Rent</a>
+              
             </div>
             <div class="navbar-nav">
               <form class="logout" action="{% url 'logout' %}" method="POST">
