--- a/templates/rent/base.html
+++ b/templates/rent/base.html
@@ -26,7 +26,7 @@
             src="{% static 'images/logo-removebg-preview.png' %}"
             alt="navbar brand"
             class="navbar-brand"
-            height="35px"
+            height="37px"
           /></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -34,7 +34,7 @@
           <div class="collapse navbar-collapse" id="navbarToggle">
             <div class="navbar-nav mr-auto">
               <a class="nav-item nav-link" href="{% url 'dashboard' %}">Dashboard</a>
-              <!-- <a class="nav-item nav-link" href="">About</a> -->
+              <a class="nav-item nav-link" href="{% url 'create-shop-rent' %}">Create Rent</a>
             </div>
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
