--- a/templates/rent/list_rents.html
+++ b/templates/rent/list_rents.html
@@ -12,7 +12,7 @@
             {% if user.is_superuser %}
             <div>
               <a class="btn btn-secondary btn-sm mt-1 mb-1" style="justify-content: right; text-align: end;" href="{% url 'edit-shop-rents' rent.shop.no %}">More Details</a>
-              <a class="btn btn-danger btn-sm mt-1 mb-1" href="">Delete</a>
+              <a class="btn btn-primary btn-sm mt-1 mb-1" href="{% url 'send-rent-reminder' rent.shop.no %}">Send Rent Reminder</a>
             </div>
           {% endif %}
           </div>
