--- a/templates/customer/customer.html
+++ b/templates/customer/customer.html
@@ -48,8 +48,8 @@
                             <td>{{customer.phone}}</td>
                             <td>{{customer.status}}</td>
                             <td>
-                             <a href="{% url 'customer_update' customer.id %}" class="btn text-secondary px-0">
-                             EDIT
+                             <a href="{% url 'customer_update' customer.id %}" class="btn btn-outline-success">
+                             VIEW
                              </a>
                             </td>
                             </tr>
