--- a/templates/customer/customer_admin_update_customer_form.html
+++ b/templates/customer/customer_admin_update_customer_form.html
@@ -92,13 +92,26 @@
                                 {{form.status|as_crispy_field}}
                             </div> 
 
+                        </div>
+
+                        <div class="row">
+                            <div class="col-md-6">
+                                {{form.data_entry_officer_note|as_crispy_field}}
+                            </div>
+
+                            <div class="col-md-6">
+                                {{form.review_officer_note|as_crispy_field}}
+                            </div>
+
+                            
+                            <div class="col-md-6">
+                                {{form.approval_officer_note|as_crispy_field}}
+                            </div>
+                            
+
                             <div class="col-md-2">
                                 {{form.approval|as_crispy_field}}
                             </div>   
-                            
-                            
-                           
-                        
                         </div>
                           
                         </br>
