--- a/templates/web/login.html
+++ b/templates/web/login.html
@@ -2,11 +2,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Login Page</title>
+	<title>Nina Sky Portal | Login Page</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 <!--===============================================================================================-->	
-	<link rel="icon" type="image/png" href="images/icons/favicon.ico"/>
+	<link rel="icon" type="image/png" href="{% static 'web/css/favicon.ico' %}"/>
 <!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="{% static 'web/vendor/bootstrap/css/bootstrap.min.css' %}">
 <!--===============================================================================================-->
@@ -39,7 +39,7 @@
 			<div class="wrap-login100">
 				<div class="login100-form-title" style="background-image: url(/static/web/images/bg-01.jpg);">
 					<span class="login100-form-title-1">
-						Sign In 
+						NINA SKY PORTAL | Sign In 
 					</span>
 				</div>
 
