--- a/templates/customer/customer_form.html
+++ b/templates/customer/customer_form.html
@@ -90,7 +90,13 @@
                             
                             <div class="col-md-2">
                                 {{form.status|as_crispy_field}}
-                            </div>    
+                            </div>
+
+                            <div class="col-md-6">
+                                {{form.data_entry_officer_note|as_crispy_field}}
+                            </div>
+
+                           
                             
                            
                         
