--- a/templates/shop/myshop.html
+++ b/templates/shop/myshop.html
@@ -60,8 +60,8 @@
                         <!-- <td>{{shop.shop_rent}}</td> -->
                          {% if user.is_superuser %}
                         <td>
-                         <a href="{% url 'admin-edit-shop-form' shop.no %}" class="btn text-secondary px-0">
-                         EDIT
+                         <a href="{% url 'admin-edit-shop-form' shop.no %}" class="btn btn-outline-success">
+                         VIEW
                          </a>
                         </td>
                         
