--- a/templates/web/dashboard.html
+++ b/templates/web/dashboard.html
@@ -1123,7 +1123,7 @@
                           <i class="fas fa-ban"></i>
                         </button>
                       </div> -->
-                      {% for user in all_customers %}
+                      <!-- {% for user in all_customers %}
                       <div class="item-list">
                         {% if user.profile.image %}
                         <div class="avatar">
@@ -1161,7 +1161,7 @@
                         {% endif %}
 
                       </div>
-                      {% endfor %}
+                      {% endfor %} -->
                       <!-- <div class="item-list">
                         <div class="avatar">
                           <span
