--- a/templates/customer/customer.html
+++ b/templates/customer/customer.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %} {% block title %} Customer Data Page {% endblock %}
+{% extends 'base.html' %} {% block title %} Nina Sky Portal | Customer Data {% endblock %}
 
 {% block content %}
 
