--- a/templates/web/data_entry_officer_signup.html
+++ b/templates/web/data_entry_officer_signup.html
@@ -39,7 +39,7 @@
 			<div class="wrap-login100">
 				<div class="login100-form-title" style="background-image: url(/static/web/images/bg-01.jpg);">
 					<span class="login100-form-title-1">
-						Sign Up | Customer
+						Sign Up | Data Entry Officer
 					</span>
 				</div>
 
