--- a/templates/customer/approver_customer_admin_update_customer_form.html
+++ b/templates/customer/approver_customer_admin_update_customer_form.html
@@ -105,6 +105,14 @@
 
                         
                         </div>
+                        <div class="row">
+                            <div class="col-md-6">
+                                {{ form.approval_officer_note|as_crispy_field}}
+                            </div>
+                            <div class="col-md-2">
+                                {{ form.approval|as_crispy_field}}
+                            </div>
+                        </div>
                           
                         </br>
                         <div class="row">
