--- a/templates/customer/customer_form.html
+++ b/templates/customer/customer_form.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %} {% block title %} Customer Master Record {% endblock %}
+{% extends 'base.html' %} {% block title %} Nina Sky Portal |Create Customer {% endblock %}
 {% load static %}
 {% load crispy_forms_tags %}
 {% block content %}
@@ -33,10 +33,10 @@
     <br>
 
     <div class="row">
-        <div class="col-md-3">
+        <div class="col-md-2">
             <img src="{% static 'images/customer.jpg' %}" class="card-img-top mx-auto"  alt="Happy Customers">
         </div>
-        <div class="col-md-9">
+        <div class="col-md-10">
             <div class="card mx-auto">
                 <div class="card-header">Customer Creation Page</div>
                 <div class="card-body">
@@ -47,6 +47,9 @@
                         <div class="row">
                             <div class="col-md-2">
                                 {{form.no|as_crispy_field}}
+                            </div>
+                            <div class="col-md-2">
+                                {{form.title|as_crispy_field}}
                             </div>
                             <div class="col-md-4">
                                 {{form.name|as_crispy_field}}
