--- a/templates/customer/approver_customer_admin_update_customer_form.html
+++ b/templates/customer/approver_customer_admin_update_customer_form.html
@@ -118,7 +118,7 @@
                         <div class="row">
                                 <div class="col-md-4">
                                   
-                                <button  type="submit" class="btn btn-success w-100">Submit</button>
+                                <button  type="submit" class="btn btn-success w-100">Approve</button>
                                 </div>
                                 <div class="col-md-6">
                                 </div>
