--- a/templates/customer/customer_admin_update_customer_form.html
+++ b/templates/customer/customer_admin_update_customer_form.html
@@ -110,7 +110,7 @@
                         <div class="row">
                                 <div class="col-md-4">
                                   
-                                <button  type="submit" class="btn btn-success w-100">Submit</button>
+                                <button  type="submit" class="btn btn-success w-100">Review</button>
                                 </div>
                                 <div class="col-md-6">
                                 </div>
