--- a/templates/rent/base.html
+++ b/templates/rent/base.html
@@ -34,7 +34,7 @@
           <div class="collapse navbar-collapse" id="navbarToggle">
             <div class="navbar-nav mr-auto">
               <a class="nav-item nav-link" href="{% url 'dashboard' %}">Dashboard</a>
-              <a class="nav-item nav-link" href="{% url 'create-shop-rent' %}">Create Rent</a>
+              <a class="nav-item nav-link" href="{% url 'create-shop-rent' %}">Create Allocation</a>
             </div>
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
