--- a/templates/rent/create_rent.html
+++ b/templates/rent/create_rent.html
@@ -5,7 +5,7 @@
         <form method="POST">
             {% csrf_token %}
             <fieldset class="form-group">
-                <legend class="border-bottom mb-4"><h3>Create Rent</h3></legend>
+                <legend class="border-bottom mb-4"><h3>Create Allocation</h3></legend>
                 {{ form|crispy }}
             </fieldset>
             <div class="form-group">
