--- a/templates/shop/new_shop_form.html
+++ b/templates/shop/new_shop_form.html
@@ -65,12 +65,12 @@
         const priceField = document.getElementById('id_price');
 
         const TYPE_PRICES = {
-            'A': 32000.00,
-            'B': 29000.00,
-            'C': 28000.00,
-            'D': 25000.00,
-            'E': 22000.00,
-            'F': 19000.00,
+            'Platinum': 32000.00,
+            'Titanium': 29000.00,
+            'Diamond': 28000.00,
+            'Premium': 25000.00,
+            'Gold': 22000.00,
+            'Silver': 19000.00,
         };
 
         function updatePrice() {
