--- a/templates/web/dashboard.html
+++ b/templates/web/dashboard.html
@@ -1033,9 +1033,11 @@
                                   </div> -->
                                   <strong>Receipts</strong>
                                 </td>
+                                
                                 <td><strong>Nina(₦)</strong></td>
                                 <td class="text-end"><strong>Chairman(₦)</strong></td>
                                 <td class="text-end"><strong>Total Receipts(₦)</strong></td>
+      
                               </tr>
                               <tr>
                                 <td>
@@ -1047,9 +1049,10 @@
                                   </div> -->
                                   <p><strong>Daily</strong></p>
                                 </td>
-                                <td><strong>300,000.34</strong></td>
-                                <td class="text-end"><strong>865,321.23</strong></td>
-                                <td class="text-end"><strong>1,654,324.21</strong></td>
+
+                                <td><strong>{{ nina_daily_income }}</strong></td>
+                                <td class="text-end"><strong>{{ chairman_daily_income }}</strong></td>
+                                <td class="text-end"><strong>{{ daily_income_total }}</strong></td>
                               </tr>
                               <tr>
                                 <td>
@@ -1062,9 +1065,9 @@
                                   
                                   <strong>Weekly</strong>
                                 </td>
-                                <td><strong>1,000,065.12</strong></td>
-                                <td class="text-end"><strong>1,119,543.89</strong></td>
-                                <td class="text-end"><strong>2,764,321.43</strong></td>
+                                <td><strong>{{ nina_weekly_income }}</strong></td>
+                                <td class="text-end"><strong>{{ chairman_weekly_income }}</strong></td>
+                                <td class="text-end"><strong>{{ weekly_income_total }}</strong></td>
                               </tr>
                               <tr>
                                 <td>
@@ -1076,9 +1079,9 @@
                                   </div> -->
                                   <strong>Yearly</strong>
                                 </td>
-                                <td><strong>1,560,678.87</strong></td>
-                                <td class="text-end"><strong>1,801,453.98</strong></td>
-                                <td class="text-end"><strong>190,432,231.32</strong></td>
+                                <td><strong>{{ nina_yearly_income }}</strong></td>
+                                <td class="text-end"><strong>{{ chairman_yearly_income }} </strong></td>
+                                <td class="text-end"><strong>{{ yearly_income_total}}</strong></td>
                               </tr>
                               <tr>
                                 <td>
