--- a/templates/rent/base.html
+++ b/templates/rent/base.html
@@ -10,6 +10,12 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
+    <link
+    rel="icon"
+    href="{% static 'web/css/favicon.ico' %}"
+    type="image/x-icon"
+  />
+
     <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}">
 
     {% if title %}
