--- a/templates/shop/myshop.html
+++ b/templates/shop/myshop.html
@@ -67,6 +67,11 @@
                         </td>
                         
                         {% endif %}
+                        <td>
+                            <a href="{% url 'generate-shop-paymrnt-advice' shop.no %}" class="btn btn-outline-success">
+                            View Advice
+                            </a>
+                           </td>
 
                         </tr>
                         {% endfor %}
