--- a/templates/web/dashboard.html
+++ b/templates/web/dashboard.html
@@ -120,6 +120,15 @@
                   <p>Allocation</p>
                   
                 </a>
+                <a
+                 
+                  href="{% url 'upload-customer-payment' %}"
+                  
+                >
+                  <i class="fas fa-upload"></i>
+                  <p>Upload Receipts</p>
+                  
+                </a>
                 <!-- <div class="collapse" id="dashboard">
                   <ul class="nav nav-collapse">
                     <li>
