--- a/templates/customer/upload_customer_receipts.html
+++ b/templates/customer/upload_customer_receipts.html
@@ -9,7 +9,7 @@
                 {{ form|crispy }}
             </fieldset>
             <div class="form-group">
-                <button class="btn btn-outline-info" type="submit">Upload Income</button>
+                <button class="btn btn-outline-info" type="submit">Upload Receipt</button>
             </div>
         </form>
         <!-- <div class="border-top pt-3">
