--- a/templates/web/dashboard.html
+++ b/templates/web/dashboard.html
@@ -15,6 +15,8 @@
       type="image/x-icon"
     />
 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
     <!-- Fonts and icons -->
     <script src="{% static 'web/web_dashboard/assets/js/plugin/webfont/webfont.min.js' %}"></script>
     <script>
@@ -699,11 +701,14 @@
 
         {% if messages %}
         {% for message in messages %}
-        <div class="alert alert-{{message.tags}} alert-dismissible fade show" role="alert">
+        <!-- <div class="alert alert-{{message.tags}} alert-dismissible fade show" role="alert">
           <strong>{{ message }}</strong>
           <button type="button" class="close" data-dismiss="alert" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
+        </div> -->
+        <div class="alert alert-success" role="alert">
+          {{ message }}
         </div>
         {% endfor %}
         {% endif %}
