--- a/templates/shop/generate_shop_payment_advice.html
+++ b/templates/shop/generate_shop_payment_advice.html
@@ -17,18 +17,7 @@
           </tr>
         </thead>
         <tbody>
-            <tr>
-                <th scope="row">Shop Size</th>
-                <td>{{ shop.size }}</td>
-                <!-- <td>Otto</td>
-                <td>@mdo</td> -->
-            </tr>
-            <tr>
-                <th scope="row">Shop Type</th>
-                <td>{{ shop.type }}</td>
-                <!-- <td>Otto</td>
-                <td>@mdo</td> -->
-              </tr>
+            
           <tr>
             <th scope="row">Shop Rent</th>
             <td>{{ shop.rent }}</td>
@@ -60,11 +49,31 @@
             <td>@twitter</td> -->
           </tr>
           <tr>
-            <th scope="row"><strong><h4>Total Payment</h4></strong></th>
+            <th scope="row"><strong><h4>Total Rent Payable</h4></strong></th>
             <td><strong>{{ shop.total }}</strong></td>
             <!-- <td>the Bird</td>
             <td>@twitter</td> -->
           </tr>
+          <thead>
+            <tr>
+              <th scope="col">Shop Details</th>
+              <th scope="col">#</th>
+              <!-- <th scope="col">Last</th>
+              <th scope="col">Handle</th> -->
+            </tr>
+            <tr>
+              <th scope="row">Shop Size</th>
+              <td>{{ shop.size }}</td>
+              <!-- <td>Otto</td>
+              <td>@mdo</td> -->
+          </tr>
+          <tr>
+              <th scope="row">Shop Type</th>
+              <td>{{ shop.type }}</td>
+              <!-- <td>Otto</td>
+              <td>@mdo</td> -->
+            </tr>
+          </thead>
         </tbody>
       </table>
       <br>
