--- a/templates/shop/generate_shop_payment_advice.html
+++ b/templates/shop/generate_shop_payment_advice.html
@@ -19,13 +19,13 @@
         <tbody>
             
           <tr>
-            <th scope="row">Shop Rent</th>
+            <th scope="row">Net Rent</th>
             <td>{{ shop.rent }}</td>
             <!-- <td>Otto</td>
             <td>@mdo</td> -->
           </tr>
           <tr>
-            <th scope="row">Shop Price</th>
+            <th scope="row">Gross Rent</th>
             <td>{{shop.shop_price }}</td>
             <!-- <td>Thornton</td>
             <td>@fat</td> -->
