--- a/templates/shop/generate_shop_payment_advice.html
+++ b/templates/shop/generate_shop_payment_advice.html
@@ -4,7 +4,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <h1 class="text-center">Shop Payment Advice</h1>
+                <h1 class="text-center">Shop Payment Advice (New Customer)</h1>
                 <h3>Shop No: {{ shop.no }}</h3><br>
                 
     <table class="table">
