--- a/templates/shop/generate_shop_payment_advice_old_customer.html
+++ b/templates/shop/generate_shop_payment_advice_old_customer.html
@@ -4,7 +4,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <h1 class="text-center">Shop Payment Advice</h1>
+                <h2 class="text-center">Shop Payment Advice (Old Customer)</h2>
                 <h3>Shop No: {{ shop.no }}</h3><br>
                 
     <table class="table">
@@ -36,18 +36,18 @@
             <!-- <td>the Bird</td>
             <td>@twitter</td> -->
           </tr>
-          <tr>
+          <!-- <tr>
             <th scope="row">Shop Agency</th>
             <td>{{ shop.shop_agency }}</td>
-            <!-- <td>the Bird</td>
-            <td>@twitter</td> -->
-          </tr>
-          <tr>
+            <td>the Bird</td>
+            <td>@twitter</td>
+          </tr> -->
+          <!-- <tr>
             <th scope="row">Shop Legal</th>
             <td>{{ shop.shop_legal }}</td>
-            <!-- <td>the Bird</td>
-            <td>@twitter</td> -->
-          </tr>
+            <td>the Bird</td>
+            <td>@twitter</td>
+          </tr> -->
           <tr>
             <th scope="row"><strong><h4>Total Rent Payable</h4></strong></th>
             <td><strong>{{ shop.total }}</strong></td>
