--- a/templates/shop/generate_shop_payment_advice.html
+++ b/templates/shop/generate_shop_payment_advice.html
@@ -19,35 +19,60 @@
         <tbody>
             
           <tr>
-            <th scope="row">Net Rent</th>
-            <td>{{ shop.rent }}</td>
+            <th scope="row">Net annual rent</th>
+            <td>{{ shop.new_rent }}</td>
             <!-- <td>Otto</td>
             <td>@mdo</td> -->
           </tr>
           <tr>
+            <th scope="row">7.5% VAT</th>
+            <td>{{ shop.vat }}</td>
+            <!-- <td>Otto</td>
+            <td>@mdo</td> -->
+          </tr>
+          <tr>
+            <th scope="row">5% VAT</th>
+            <td>{{ shop.wht}}</td>
+            <!-- <td>Otto</td>
+            <td>@mdo</td> -->
+          </tr>
+          <tr>
+            <th scope="row">Gross annual rent</th>
+            <td>{{ shop.gross_rent }}</td>
+            <!-- <td>Otto</td>
+            <td>@mdo</td> -->
+          </tr>
+          <!-- <tr>
             <th scope="row">Gross Rent</th>
             <td>{{shop.shop_price }}</td>
-            <!-- <td>Thornton</td>
-            <td>@fat</td> -->
-          </tr>
-          <tr>
+            <td>Thornton</td>
+            <td>@fat</td> 
+          </tr> -->
+          <!-- <tr>
             <th scope="row">Shop Charges</th>
             <td>{{ shop.shop_charges }}</td>
-            <!-- <td>the Bird</td>
-            <td>@twitter</td> -->
-          </tr>
+            <td>the Bird</td>
+            <td>@twitter</td>
+          </tr> -->
           <tr>
             <th scope="row">Shop Agency</th>
-            <td>{{ shop.shop_agency }}</td>
+            <td>{{ shop.new_shop_agency }}</td>
             <!-- <td>the Bird</td>
             <td>@twitter</td> -->
           </tr>
           <tr>
             <th scope="row">Shop Legal</th>
-            <td>{{ shop.shop_legal }}</td>
+            <td>{{ shop.new_shop_legal }}</td>
             <!-- <td>the Bird</td>
             <td>@twitter</td> -->
           </tr>
+          <tr>
+            <th scope="row">Shop Legal</th>
+            <td>{{ shop.new_shop_legal }}</td>
+            <!-- <td>the Bird</td>
+            <td>@twitter</td> -->
+          </tr>
+
           <tr>
             <th scope="row"><strong><h4>Total Rent Payable</h4></strong></th>
             <td><strong>{{ shop.total }}</strong></td>
