--- a/templates/shop/generate_shop_payment_advice.html
+++ b/templates/shop/generate_shop_payment_advice.html
@@ -55,23 +55,23 @@
             <td>@twitter</td>
           </tr> -->
           <tr>
-            <th scope="row">Shop Agency</th>
+            <th scope="row">Shop Agency (15%)</th>
             <td>{{ shop.new_shop_agency }}</td>
             <!-- <td>the Bird</td>
             <td>@twitter</td> -->
           </tr>
           <tr>
-            <th scope="row">Shop Legal</th>
+            <th scope="row">Shop Legal (5%)</th>
             <td>{{ shop.new_shop_legal }}</td>
             <!-- <td>the Bird</td>
             <td>@twitter</td> -->
           </tr>
-          <tr>
+          <!-- <tr>
             <th scope="row">Shop Legal</th>
             <td>{{ shop.new_shop_legal }}</td>
-            <!-- <td>the Bird</td>
-            <td>@twitter</td> -->
-          </tr>
+            <td>the Bird</td>
+            <td>@twitter</td>
+          </tr> -->
 
           <tr>
             <th scope="row"><strong><h4>Total Rent Payable</h4></strong></th>
